# quillmark

./: .devcontainer.json  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEBRIEF.md  README.md  SIMPLIFICATIONS.md  TECH_DEBT_0.92.md  TODO.md  VULNERABILITIES.md  mkdocs.yml
crates/backends/pdfform/: Cargo.toml
crates/backends/pdfform/src/: bind.rs  flatten.rs  form.rs  lib.rs  resolve.rs  scaffold.rs  typography.rs
crates/backends/pdfform/tests/: canvas_conformance.rs  gen_background.rs  gov_form.rs  render.rs  render_formats.rs  richtext_form.rs  sample_form.rs
crates/backends/typst/: Cargo.toml
crates/backends/typst/docs/designs/: CONVERT.md
crates/backends/typst/src/: compile.rs  convert.rs  data_literal_spike.rs  emit.rs  error_mapping.rs  helper.rs  lib.rs  lib.typ.template  pdf_scan.rs  probe_annots.rs  sig_overlay.rs  spike_introspector.rs  spike_lopdf.rs  spike_pdf_oxide.rs  spike_pdfwriter.rs  world.rs
crates/backends/typst/src/overlay/: extract.rs  group_label_scan_spike.rs  inject.rs  jump_scan_spike.rs  markup_block_spike.rs  mod.rs  region_scan.rs  span_scan.rs  span_scan_spike.rs
crates/backends/typst/src/sig_overlay/: extract.rs  inject.rs  mod.rs  scanner.rs
crates/backends/typst/tests/: content_regions.rs  eval_error_hint.rs  live_apply.rs  overlap_compile.rs  plate_resolution.rs  pretag_spike.rs  producer_meta.rs  sig_field.rs
crates/bindings/cli/: Cargo.toml  README.md
crates/bindings/cli/src/: errors.rs  main.rs  output.rs
crates/bindings/cli/src/commands/: blueprint.rs  info.rs  mod.rs  qualify.rs  render.rs  scaffold.rs  schema.rs  specs.rs  validate.rs
crates/bindings/dotnet/: Cargo.toml  DESIGN.md  README.md
crates/bindings/dotnet/csharp/: .gitignore  Quillmark.sln
crates/bindings/dotnet/csharp/QuillDemo/: Program.cs  QuillDemo.csproj
crates/bindings/dotnet/src/: abi.rs  lib.rs
crates/bindings/python/: Cargo.toml  README.md  pyproject.toml
crates/bindings/python/examples/: quill_demo.py
crates/bindings/python/src/: enums.rs  errors.rs  lib.rs  types.rs
crates/bindings/python/tests/: conftest.py  test_api_requirements.py  test_engine.py  test_form.py  test_parse.py  test_quill.py  test_render.py  test_schema.py  test_validate.py  test_versioning.py
crates/bindings/wasm/: Cargo.toml  README.md  basic.test.js  canvas.test.js  core.test.js  package.json  package.template.json  regions.test.js  runtime.test.js  runtime.types.test-d.ts  spike-richtext.test.js  test-helpers.js  tsconfig.json  vitest.config.js
crates/bindings/wasm/runtime/: runtime.d.ts  runtime.js
crates/bindings/wasm/src/: engine.rs  error.rs  lib.rs  types.rs
crates/bindings/wasm/tests/: metadata.rs  quillLoader.js  resolve_quill.rs  wasm_bindings.rs
crates/conformance/: Cargo.toml
crates/conformance/src/: lib.rs
crates/content/: Cargo.toml
crates/content/src/: delta.rs  export.rs  import.rs  lib.rs  model.rs  normalize.rs  ops.rs  serial.rs  usv.rs
crates/content/tests/: properties.rs
crates/core/: Cargo.toml
crates/core/examples/: print_blueprint.rs  print_template.rs
crates/core/src/: backend.rs  editor.rs  error.rs  lib.rs  normalize.rs  path.rs  quill.rs  reader.rs  region.rs  session.rs  types.rs  value.rs  version.rs  writer.rs
crates/core/src/document/: assemble.rs  dto.rs  edit.rs  emit.rs  fences.rs  frontmatter.rs  limits.rs  meta.rs  mod.rs  payload.rs  prescan.rs  sentinel.rs  wire.rs  yaml_hints.rs
crates/core/src/quill/: blueprint.rs  compose.rs  config.rs  field_states.rs  fill.rs  formats.rs  ignore.rs  load.rs  query.rs  schema.rs  schema_yaml.rs  seed.rs  template.rs  tests.rs  tree.rs  types.rs  validation.rs
crates/core/tests/: markdown_field_test.rs  spec_conformance_probe.rs
crates/fuzz/: Cargo.toml  README.md
crates/fuzz/proptest-regressions/: emit_roundtrip_fuzz.txt
crates/fuzz/src/: coerce_fuzz.rs  convert_fuzz.rs  emit_roundtrip_fuzz.rs  lib.rs  parse_fuzz.rs
crates/quillmark/: Cargo.toml
crates/quillmark-pdf/: Cargo.toml
crates/quillmark-pdf/src/: compose.rs  error.rs  lib.rs  reader.rs  spec.rs  stamp.rs  update.rs  writer.rs
crates/quillmark-pdf/tests/: compose.rs  stamp.rs
crates/quillmark-qualify/: Cargo.toml
crates/quillmark-qualify/src/: error.rs  lib.rs
crates/quillmark-qualify/tests/: decrypt.rs  nested.rs  roundtrip.rs  xref.rs
crates/quillmark/examples/: pdfform_preview.rs  taro.rs  usaf_memo.rs
crates/quillmark/examples/common/: mod.rs
crates/quillmark/src/: form.rs  lib.rs  load.rs  seed.rs
crates/quillmark/src/form/: tests.rs
crates/quillmark/src/orchestration/: engine.rs  mod.rs  quill.rs
crates/quillmark/src/seed/: tests.rs
crates/quillmark/tests/: backend_registration_test.rs  blueprint_render_test.rs  cmu_letter_date_region_test.rs  common.rs  default_values_test.rs  dry_run_test.rs  feature_flag_test.rs  multibyte_regression_test.rs  plaintext_render_test.rs  quill_engine_test.rs  quiver_test.rs  security_tests.rs  table_render_test.rs  usaf_memo_regions_test.rs  usaf_memo_signature_test.rs  validate_test.rs  version_mismatch_test.rs
crates/richtext/: Cargo.toml
crates/richtext-spikes/: Cargo.toml  README.md
crates/richtext-spikes/editor-pm/: package.json
crates/richtext-spikes/editor-pm/src/: bridge.js  corpus.js  schema.js
crates/richtext-spikes/editor-pm/tests/: spike-a.test.js
crates/richtext-spikes/form-poc/: .gitignore  index.html  package.json  playwright.config.js  vite.config.js
crates/richtext-spikes/form-poc/e2e/: fixtures.js  form-poc.spec.js
crates/richtext-spikes/form-poc/src/: body-field.js  corpus-bridge.js  fields.js  load-usaf-memo.js  main.js  navigation.js  preview.js  richtext-field.js  styles.css
crates/richtext-spikes/src/: canonical.rs  codec.rs  diff.rs  lib.rs  model.rs  sourcemap.rs  usv.rs
crates/richtext-spikes/tests/: spike_a_editor.rs  spike_b_sourcemap.rs  spike_c_seam.rs
crates/richtext/src/: change_log.rs  delta.rs  export.rs  import.rs  lib.rs  model.rs  normalize.rs  ops.rs  serial.rs  usv.rs
crates/richtext/tests/: properties.proptest-regressions  properties.rs
(+218 files in other folders)
