[workspace]
members = [
    "crates/core",
    "crates/quillmark",
    "crates/backends/typst",
    "crates/fixtures",
    "crates/bindings/wasm",
    "crates/fuzz",
    "crates/bindings/python",
    "crates/bindings/cli",
]
# The default members to include when running `cargo build` or `cargo test` in the workspace root.
default-members = [
    "crates/core",
    "crates/quillmark",
    "crates/backends/typst",
    "crates/bindings/cli",
]
resolver = "2"

[workspace.package]
version = "0.72.0"
edition = "2021"
include = ["src/**", "Cargo.toml", "README*", "LICENSE*"]
readme = "README.md"
license = "Apache-2.0"

[workspace.dependencies]
# Core dependencies
serde = { version = "~1.0", features = ["derive"] }
serde-saphyr = "~0.0"
serde_json = { version = "~1.0", features = ["preserve_order"] }


thiserror = "~2.0"
toml = "~0.8"

# File globbing
glob = "0.3.3"

# Ordered map — preserves insertion order for deterministic serialization
indexmap = { version = "2", features = ["serde"] }

# Unicode normalization
unicode-normalization = "0.1"

# Typst backend dependencies
pulldown-cmark = "0.13.0"
time = { version = "0.3.44", features = ["formatting", "parsing"] }
typst = "0.14.2"
typst-pdf = "0.14.2"
typst-render = "0.14.2"
typst-svg = "0.14.2"

# Intra-project dependencies
quillmark-core = { version = "0.72.0", path = "crates/core" }
quillmark-typst = { version = "0.72.0", path = "crates/backends/typst", default-features = false }
quillmark = { version = "0.72.0", path = "crates/quillmark" }

# Test and dev dependencies
tempfile = "~3.23"
proptest = "~1.5"
quillmark-fixtures = { path = "crates/fixtures" }

[workspace.metadata.workspaces]
# Exclude fixtures from publishing since it's dev-only
no_individual_tags = true

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
split-debuginfo = "unpacked" # Faster on macOS/Linux
[profile.dev.package."*"]
debug = false
opt-level = 0

[profile.release]
opt-level = 3      # Optimize for speed (not "z")
lto = "thin"       # Good speed improvement, reasonable compile time
codegen-units = 16 # Balance parallelization with optimization
panic = "abort"    # Smaller binary, slightly faster
strip = true       # Remove debug symbols (size)

# WASM-specific optimizations
[profile.wasm-release]
inherits = "release"
opt-level = "z"      # Optimize for size (WASM benefits greatly)
lto = true           # Full LTO for maximum size reduction
codegen-units = 1    # Single codegen unit for best optimization
panic = "abort"      # Smaller binary
strip = true         # Remove debug symbols
[profile.wasm-release.package."*"]
opt-level = "z" # Optimize all dependencies for size

# Fast-compiling WASM profile for CI / local iteration. Produces a larger,
# unoptimized binary — only correctness matters here, not size.
[profile.wasm-ci]
inherits = "dev"
opt-level = 0
lto = false
codegen-units = 16
panic = "abort"      # Required: wasm32 has no unwinding
debug = false        # Smaller artifacts, faster link
strip = "debuginfo"
incremental = false  # Matches CARGO_INCREMENTAL=0 in CI
