[package]
name = "quillmark-conformance"
version.workspace = true
edition.workspace = true
description = "Engine-side runner for the cross-repo conformance fixture set"
license.workspace = true
publish = false  # the harness reads ../../conformance/, outside the crate tree

[dependencies]
quillmark-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
