[package]
name = "quillmark-core"
version.workspace = true
edition.workspace = true
include.workspace = true
readme.workspace = true
description = "Core types and functionality for Quillmark"
license.workspace = true
documentation = "https://docs.rs/quillmark-core"
homepage = "https://quillmark.readthedocs.io/"
repository = "https://github.com/nibsbin/quillmark"
publish = true

[dependencies]
serde = { workspace = true }
serde-saphyr = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
glob = { workspace = true }
unicode-normalization = { workspace = true }
time = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
quillmark-fixtures = { workspace = true }
