[package]
name = "quillmark-fuzz"
version.workspace = true
edition.workspace = true
description = "Fuzzing tests for Quillmark"
license.workspace = true
publish = false  # Don't publish fuzzing tests to crates.io

[dependencies]
quillmark-core = { workspace = true }
quillmark-typst = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
