[package]
name = "quillmark-qualify"
version.workspace = true
edition.workspace = true
include = ["src/**", "Cargo.toml", "README*", "LICENSE*"]
readme.workspace = true
description = "Qualification layer: turn an AcroForm PDF into a pdfform quill's stripped form.pdf + form.json"
license.workspace = true
documentation = "https://docs.rs/quillmark-qualify"
homepage.workspace = true
repository = "https://github.com/quillmark-org/quillmark"

[dependencies]
# Build-time tooling: decrypt + parse + strip + re-serialize. We turn off
# lopdf's default features (rayon/chrono/jiff/time) since none are needed on the
# decrypt/parse/save path and they only add weight; `rand`/`aes`/`flate2` remain
# (non-optional) so RC4/AES decryption still works.
lopdf = { workspace = true }
# The single source of truth for the form.json wire schema we EMIT.
quillmark-pdfform = { workspace = true }
# `page_media_boxes` (geometry reference) + the round-trip test's stamp spine.
quillmark-pdf = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
quillmark-fixtures = { workspace = true }
