[package]
name = "quillmark"
version.workspace = true
edition.workspace = true
include.workspace = true
readme.workspace = true
description = "Quillmark engine API"
license.workspace = true
documentation = "https://docs.rs/quillmark"
homepage.workspace = true
repository = "https://github.com/quillmark-org/quillmark"

[dependencies]
quillmark-core = { workspace = true }
quillmark-typst = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
quillmark-typst = { workspace = true }
quillmark-fixtures = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["typst"]
typst = ["dep:quillmark-typst"]
