[package]
name = "quillmark"
version.workspace = true
edition.workspace = true
include.workspace = true
readme.workspace = true
description = "A schema-driven document engine — turn Markdown into a fully typeset document with a Quill"
license.workspace = true
documentation = "https://docs.rs/quillmark"
homepage.workspace = true
repository = "https://github.com/quillmark-org/quillmark"

[dependencies]
quillmark-core = { workspace = true }
quillmark-typst = { workspace = true, optional = true }
quillmark-pdfform = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
quillmark-typst = { workspace = true }
quillmark-pdfform = { workspace = true }
quillmark-fixtures = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["typst", "pdfform"]
typst = ["dep:quillmark-typst"]
pdfform = ["dep:quillmark-pdfform"]
# pdfform + its raster/SVG preview seam (hayro): the pdfform session reports
# `supports_canvas() == true` and rasterizes pages, so a canvas binding can
# paint pdfform quills. Strict superset of `pdfform`.
pdfform-preview = ["pdfform", "quillmark-pdfform/preview"]
