[package]
name = "quillmark"
version.workspace = true
edition.workspace = true
include.workspace = true
readme.workspace = true
description = "A schema-driven document engine — turn Markdown into a fully typeset document with a Quill"
license.workspace = true
documentation = "https://docs.rs/quillmark"
homepage.workspace = true
repository = "https://github.com/quillmark-org/quillmark"

[dependencies]
quillmark-core = { workspace = true }
quillmark-typst = { workspace = true, optional = true }
quillmark-pdfform = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
quillmark-typst = { workspace = true }
quillmark-pdfform = { workspace = true }
quillmark-fixtures = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["typst", "pdfform"]
typst = ["dep:quillmark-typst"]
# The pdfform backend renders forms → PDF, plus SVG/PNG/canvas raster via its
# always-linked hayro seam — so the pdfform session reports
# `supports_canvas() == true` and a canvas binding can paint pdfform quills.
pdfform = ["dep:quillmark-pdfform"]
