[package]
name = "quillmark-richtext"
version.workspace = true
edition.workspace = true
include.workspace = true
license.workspace = true
homepage.workspace = true
repository = "https://github.com/quillmark-org/quillmark"
description = "RichText corpus content model, canonical serialization, edit deltas, and markdown codecs for Quillmark (issue #831)"
# The leaf content-model crate: `quillmark-core` depends on it for the storage
# body type and the markdown-string normalizer, so it carries no dependency on
# the document engine. Published because `quillmark-core` (published) depends on
# it. Tracked in prose/plans/richtext/.
publish = true

[dependencies]
serde_json = { workspace = true }
# The markdown projection's parser. This crate is the workspace's single home
# for a CommonMark parser; render paths consume the corpus, never markdown.
pulldown-cmark = { workspace = true }
similar = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
quillmark-fixtures = { workspace = true }
