[package]
name = "quillmark-typst"
version.workspace = true
edition.workspace = true
include = ["src/**", "Cargo.toml", "README*", "LICENSE*"]
readme.workspace = true
description = "Typst backend for Quillmark"
license.workspace = true
documentation = "https://docs.rs/quillmark-typst"
homepage = "https://github.com/nibsbin/quillmark"
repository = "https://github.com/nibsbin/quillmark"

[dependencies]
pulldown-cmark = { workspace = true }
quillmark-core = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
toml = "~0.9"
typst = { workspace = true }
typst-pdf = { workspace = true }
typst-render = { workspace = true }
typst-svg = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "^0.3"
wasm-bindgen = "^0.2"

[dev-dependencies]
tempfile = { workspace = true }
