[package]
name = "quillmark-typst"
version.workspace = true
edition.workspace = true
include = ["src/**", "Cargo.toml", "README*", "LICENSE*"]
readme.workspace = true
description = "Typst backend for Quillmark"
license.workspace = true
documentation = "https://docs.rs/quillmark-typst"
homepage.workspace = true
repository = "https://github.com/borb-sh/quillmark"

[dependencies]
# Typst's process-global memo cache; evicted after each compile (compile.rs).
comemo = "0.5"
quillmark-core = { workspace = true }
# The content model `emit.rs` lowers to Typst markup. Reached directly rather than
# through core so the emitter names Content/Mark/Island types head-on. No
# markdown parser is linked into this backend — the content crosses the seam
# already imported.
quillmark-content = { workspace = true }
quillmark-pdf = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
typst = { workspace = true }
typst-layout = { workspace = true }
typst-pdf = { workspace = true }
typst-render = { workspace = true }
typst-svg = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "^0.3"
wasm-bindgen = "^0.2"

[dev-dependencies]
tempfile = { workspace = true }
# Acceptance tests parse the injected PDF to validate AcroForm structure.
lopdf = "0.36"
