[package]
name = "quillmark-cli"
version.workspace = true
edition.workspace = true
description = "Command-line interface for Quillmark, a schema-driven document engine"
license.workspace = true
include.workspace = true
readme = "README.md"
homepage.workspace = true
repository = "https://github.com/quillmark-org/quillmark"
keywords = ["markdown", "pdf", "typst", "template", "cli"]
categories = ["command-line-utilities", "text-processing"]
publish = true

[[bin]]
name = "quillmark"
path = "src/main.rs"
test = false
# The binary shares the `quillmark` name with the library crate; documenting it
# would collide at `target/doc/quillmark/index.html`. CLI internals don't need
# rustdoc HTML, so skip them.
doc = false

[dependencies]
clap = { version = "~4.5", features = ["derive"] }
quillmark = { workspace = true }
quillmark-core = { workspace = true }
serde_json = { workspace = true }

