[package]
name = "quillmark-dotnet"
version.workspace = true
edition.workspace = true
description = ".NET bindings for Quillmark (C ABI consumed by P/Invoke)"
license.workspace = true
publish = false

[lib]
name = "quillmark_dotnet"
# A C-ABI dynamic library: `libquillmark_dotnet.so` / `.dylib` /
# `quillmark_dotnet.dll`, loaded by the C# layer via P/Invoke. This mirrors
# how the Python binding ships a native `_quillmark` extension module.
crate-type = ["cdylib"]

[dependencies]
quillmark = { workspace = true, default-features = true }
quillmark-core = { workspace = true }
serde_json = { workspace = true }
