[package]
name = "quillmark-python"
version.workspace = true
edition.workspace = true
description = "Python bindings for Quillmark"
license.workspace = true
publish = false

[lib]
name = "_quillmark"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "~0.26", features = ["extension-module", "abi3-py310"] }
quillmark = { workspace = true, default-features = true }
quillmark-core = { workspace = true }
serde_json = { workspace = true }
