[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "quillmark"
dynamic = ["version"]
description = "Python bindings for Quillmark - format-first Markdown rendering"
authors = [{ name = "Quillmark Contributors" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: Markup",
]
keywords = ["markdown", "pdf", "typst", "rendering", "templates"]

[project.urls]
Homepage = "https://quillmark.readthedocs.io/"
Repository = "https://github.com/nibsbin/quillmark"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "maturin>=1.7,<2.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "quillmark._quillmark"
include = ["python/quillmark/**/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
