[package]
name = "quillmark-wasm"
version.workspace = true
edition.workspace = true
description = "WebAssembly bindings for quillmark"
license.workspace = true
repository = "https://github.com/nibsbin/quillmark"
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
quillmark = { workspace = true }
quillmark-typst = { workspace = true }
quillmark-core = { workspace = true }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_bytes = "0.11"
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
tsify = { version = "0.4.5", features = ["js"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "ImageData",
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",
] }

lopdf = { version = "0.40.0", default-features = false, features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
