[package]
name = "quillmark-wasm"
version.workspace = true
edition.workspace = true
description = "WebAssembly bindings for Quillmark, a schema-driven document engine"
license.workspace = true
repository = "https://github.com/quillmark-org/quillmark"
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Direct path dep (not `workspace = true`) so `default-features = false` is
# honoured — workspace inheritance forces the default `typst` feature on, which
# would pull Typst into the core build. This crate is `publish = false`, so no
# version pin is needed. `typst` re-enables Typst via `quillmark/typst`.
quillmark = { path = "../../quillmark", default-features = false }
quillmark-core = { workspace = true }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_bytes = "0.11"
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
tsify = { version = "0.4.5", features = ["js"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", optional = true, features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "ImageData",
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",
] }

[features]
# Two artifacts from one crate. The boundary is *which types exist*, not
# feature-gated methods inside a shared type (see
# prose/proposals/wasm-bindings-split.md).
default = ["typst"]
# Typst build: the Typst-backed engine, LiveSession, and canvas preview.
# Strict API superset of core; ~8MB of Typst is ~96% of the artifact. The
# canvas painter dispatches through the core `SessionHandle` seam, so the
# binding depends on `quillmark-typst` only transitively.
typst = ["quillmark/typst", "dep:web-sys"]
# pdfform build: add the Typst-free PDF-form backend so the engine can render
# `pdfform` quills → PDF (and SVG/PNG). Does NOT require `typst` — the engine /
# LiveSession surface is available with `pdfform` alone, giving a Typst-free
# WASM bundle. The pdfform session rasterizes pages via its always-linked hayro
# seam, so `web-sys` ships the generic canvas painter (page_size / paint,
# dispatching through the core `SessionHandle` seam) and this build reports
# `supportsCanvas == true` — mirroring how `typst` enables the same surface.
pdfform = ["quillmark/pdfform", "dep:web-sys"]
# Core build = no features: Document + Quill (parse / load / validate / schema
# / seed / blueprint). No engine, no Typst — ~0.34MB gzipped.

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.cargo-machete]
# serde_bytes is used via `#[serde(with = "serde_bytes")]` in src/types.rs,
# which cargo-machete cannot see.
ignored = ["serde_bytes"]
